<resources>
    <string name="app_name">EasyBill</string>
    <string name="archive_title">ARCHIVE</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="scan_title">SCAN</string>
    <string name="statistic_title">STATISTIC</string>
    <string name="details_bill_delete">DELETE</string>
    <string name="scan_button">SCAN</string>
    <string name="filter_button">APPLY</string>
    <string name="filter_title">FILTER</string>
    <string name="filter_price">PRICE: </string>
    <string name="filter_time_from">TIME FROM:</string>
    <string name="filter_time_to">TIME TO:</string>
    <string name="filter_year_from">YEAR FROM:</string>
    <string name="filter_year_to">YEAR TO:</string>
    <string name="filter_category">CATEGORY</string>
    <string name="filter_category_fashion">FASHION</string>
    <string name="filter_category_food">FOOD</string>
    <string name="filter_category_sport">SPORT</string>
    <string name="filter_category_health">HEALTH</string>
    <string name="filter_category_traffic">TRAFFIC</string>
    <string name="filter_category_electronics">ELECTRONICS</string>
    <string name="filter_category_living">LIVING</string>
    <string name="filter_category_other">OTHER</string>
    <string name="bill_price">%1$d €</string>

    <string-array name="year_array">
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
    </string-array>
    <string-array name="year_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="month">Month:</string>
    <string name="year">Year:</string>
</resources>
